Fix obnoxious windows horizontal scrollbar; close #20

--- a/app/src/home/mist.sass
+++ b/app/src/home/mist.sass
@@ -14,7 +14,7 @@ div.mist-gradient
   display: block
   top: 85vh
   height: 55vh
-  width: 100vw
+  width: 100%
 
   // Fake an easing on gradient color interpolation. The gradient begins
      slowly, changes quickly in the middle, and ends slowly. These values
